Fix profile picture spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -287,6 +287,7 @@ button {
 .subtitle {
   font-size: 1.5rem;
   font-weight: regular;
+  margin-bottom: 30px;
 }
 
 .thumbnail {
